--- a/mugi/home/home.css
+++ b/mugi/home/home.css
@@ -1,10 +1,33 @@
-div#bg-img  {
-      background-image: url("maika_practice03.png");
-      background-repeat: no-repeat;
-      background-attachment: fixed;
-      background-size: 600px;
+body{
+    background-color: #1a001a;
+}
+div#bg-img2  {
+    background-color: lightgreen;
+    width: 150%;
+    height: 938px;
+    background-image: url('maika_practice03.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: right;
+    background-attachment: fixed;
+    border: 1px solid red;
+    transform: scaleX(-1);
 }
 
+div#bg-img  {
+    background-color: lightblue;
+    width: 100%;
+    height: 938px;
+    background-image: url('maika_practice03.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-attachment: fixed;
+    border: 1px solid red;
+}
+
+p#green {
+    color: lightgreen;
+}
 
 h1#go {
     color:purple;
