--- a/mugi/home/home.css
+++ b/mugi/home/home.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #1a001a;
+    background-color: #999999;
 }
 
 h1{
@@ -9,32 +9,39 @@ h1{
 p{
     color:white;
 }
-div#bg-img2  {
-    background-color: lightgreen;
-    width: 150%;
-    height: 938px;
-    background-image: url('maika_practice03.png');
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: right;
-    background-attachment: fixed;
-    border: 1px solid red;
-    transform: scaleX(-1);
+
+a#nav-white{
+    color:white;
 }
 
 div#bg-img  {
-    background-color: lightblue;
-    width: 100%;
+    /*background-color: lightblue;*/
+    width: auto;
     height: 938px;
     background-image: url('maika_practice03.png');
+    background-position: left;
     background-repeat: no-repeat;
     background-size: contain;
     background-attachment: fixed;
-    border: 1px solid red;
+    /*border: 1px solid red;*/
 }
 
-p#green {
-    color: lightgreen;
+div#bg-img2  {
+    /*background-color: lightgreen;*/
+    width: 100%;
+    height: 938px;
+    background-image: url('maika_practice03_flipped.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: right;
+    background-attachment: fixed    ;
+    /*border: 1px solid red;*/
+}
+
+
+
+p#blue {
+    color: lightblue;
 }
 
 h1#go {
