--- a/mugi/home/home.css
+++ b/mugi/home/home.css
@@ -16,6 +16,10 @@ p{
     color:white;
 }
 
+a {
+    color:white;
+    font-family:"tobyfox_font", monospace;
+}
 a#nav-white{
     color:white;
 }
@@ -56,4 +60,8 @@ p#blue {
 h1#go {
     font-size: 22px;
     color: #cccccc;
+}
+
+nav {
+    background-color: #666666;
 }
