--- a/mugi/home/home.css
+++ b/mugi/home/home.css
@@ -71,3 +71,31 @@ h1#go {
 nav {
     background-color: #666666;
 }
+
+img {
+    /*overflow: hidden;*/
+    display: block;
+    width: 100%;
+    /*margin: 16px;*/
+    padding: 16px;
+    /*border: 1px solid red;*/
+}
+
+#button1 {
+    background-color: #999999;
+    border: 2px solid #666666; 
+    color: white;
+    padding: 8px 12px;
+    /*text-align: right;*/
+    /*text-decoration: none;*/
+    /*display: inline-block;*/
+    font-size: 12px;
+    /*margin: 2px 2px;*/
+    cursor: pointer;
+    transition-duration: 0.4s;
+    font-family:"tobyfox_font", monospace;
+}
+
+#button1:hover {
+    background-color: #666666;
+}
